Fixes miss justification on iOS

--- a/src/styles/CarouselItem.scss
+++ b/src/styles/CarouselItem.scss
@@ -1,6 +1,5 @@
 .BrainhubCarouselItem {
   display: flex;
-  justify-content: center;
   align-items: center;
   position: relative;
   &.BrainhubCarouselItem--clickable {
